--- a/week01/holygrail.html
+++ b/week01/holygrail.html
@@ -14,5 +14,6 @@
       <main contenteditable>Main Elements</main>
       <div class="right-sidebar" contenteditable>Right Sidebar</div>
       <footer contenteditable>Footer Content</footer>
+      <script></script>
 </body>
 </html>
