chamber site plan

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
                         <div class="week">
                             <h3>Week 1</h3>
                             <div class="activities">
-                                <a href="#">activity1</a>
+                                <a href="week01/holygrail.html">Holy Grail</a>
+                                <a href="week01/media-query.html">Media Query</a>
+                                <a href="week01/chamber-site-plan.html">Chamber of Commerce Site Plan</a>
+
                             </div>
                         </div>
                     </li>
