--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kalnia:wght@100..700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/larger.css">
+    <!-- stylesheets -->
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
+    <!-- favicon -->
     <link rel="icon" href="images/favicon.ico">
+    <!-- Open Graph for Facebook -->
+    <meta property="og:title" content="WDD230 | Kayla Moon">
+    <meta property="type" content="">
+    <meta property="image" content="C:\Users\kayla\Dropbox\My PC (DESKTOP-DITIAMG)\Desktop\Winter 2024 Classes\wdd230\images">
+    <meta property="URL" content="https://moonpie112.github.io/wdd230/">
 </head>
 <body>
     <!-- header -->
