--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WDD 230 - Web Frontend Development Kayla Moon cousre assignment portal">
+    <meta name="description" content="WDD 230 - Web Frontend Development Kayla Moon course assignment portal">
     <meta name="author" content="Kayla Moon">
     <title>Kayla Moon - WDD 230 - Web Frontend Development</title>
     <!-- fonts -->
@@ -17,9 +17,9 @@
     <link rel="icon" href="images/favicon.ico">
     <!-- Open Graph for Facebook -->
     <meta property="og:title" content="WDD230 | Kayla Moon">
-    <meta property="type" content="">
-    <meta property="image" content="C:\Users\kayla\Dropbox\My PC (DESKTOP-DITIAMG)\Desktop\Winter 2024 Classes\wdd230\images">
-    <meta property="URL" content="https://moonpie112.github.io/wdd230/">
+    <meta property="og:type" content="Website">
+    <meta property="og:image" content="C:\Users\kayla\Dropbox\My PC (DESKTOP-DITIAMG)\Desktop\Winter 2024 Classes\wdd230\images\meta-image.jpg">
+    <meta property="og:URL" content="https://moonpie112.github.io/wdd230/">
 </head>
 <body>
     <!-- header -->
@@ -31,7 +31,10 @@
     </header>
     
     <!-- navigation -->
-    <nav>
+
+    <a id="menu" href="#"></a>
+
+    <nav class="nav">
         <ul class="nav_links">
             <li class="link"><a href="#">Home</a></li>
             <li class="link"><a href="#">Chamber</a></li>
@@ -57,13 +60,13 @@
                                 <a href="week01/holygrail.html">Holy Grail</a>
                                 <a href="week01/media-query.html">Media Query</a>
                                 <a href="week01/chamber-site-plan.html">Chamber of Commerce Site Plan</a>
-
                             </div>
                         </div>
                     </li>
                     <li>
                         <div class="week">
                             <h3>Week 2</h3>
+                            <a href="https://codepen.io/Moonpie112/pen/JjVGEEo?editors=0010">CodePen Menu</a>
                             <a href="#">activity</a>
                         </div>
                     </li>
@@ -105,5 +108,6 @@
         <p>&copy;<span id="current-year"></span> | Kayla Moon | Virginia</p>
     </footer>
     <script src="scripts/getDates.js"></script>
+    <script src="scripts/hamMenu.js"></script>
 </body>
 </html>
