--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kalnia:wght@100..700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!-- stylesheets -->
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <!-- favicon -->
@@ -67,7 +68,7 @@
                         <div class="week">
                             <h3>Week 2</h3>
                             <a href="https://codepen.io/Moonpie112/pen/JjVGEEo?editors=0010">CodePen Menu</a>
-                            <a href="#">activity</a>
+                            <a href="week02/bom.html">Dom Manipulation</a>
                         </div>
                     </li>
                     <li>
