--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
             <img class="profile-img" src="images/home-main.jpg" alt="Kayla and her husband" width="100">
             <div class="header-title"><span>Kayla Moon</span></div>
         </div>
+        <img src="images/night-mode.png" alt="dark mode" id="darkBtn" width="24">
     </header>
     
     <!-- navigation -->
 
     <a id="menu" href="#"></a>
 
-    <nav class="nav">
+    <nav class="nav hide">
         <ul class="nav_links">
             <li class="link"><a href="#">Home</a></li>
             <li class="link"><a href="#">Chamber</a></li>
