--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
     
     <!-- main -->
     <main>
+        <div class="hero">
+            <picture class="temple">
+                <source media="(max-width: 430px)" srcset="images/temple-small.webp">
+                <img src="images/temple-large.webp" alt="the dc temple" width="960" height="400">
+            </picture>
+        </div>
         <div class="main-title">
             <h1>WDD 230: Web Frontend Development</h1>
         </div>
@@ -75,7 +81,8 @@
                     <li>
                         <div class="week">
                             <h3>Week 3</h3>
-                            <a href="#">activity</a>
+                            <a href="week03/lazyload.html">Responsive Images</a>
+                            <a href="week03/responsive-images.html">Lazy Loading</a>
                         </div>
                     </li>
                     <li>
