--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -10,9 +10,9 @@
     <link rel="icon" href="images/favicon.ico">
     <!-- social media -->
     <meta property="og:title" content="Discover the Chamber of Commerce for the Shire">
-    <meta property="og:type" content="Discover the Shire's Chamber of Commerce Site">
+    <meta property="og:type" content="Discover The Shire">
     <meta property="og:image" content="C:\Users\kayla\Dropbox\My PC (DESKTOP-DITIAMG)\Desktop\Winter 2024 Classes\wdd230\chamber\images\og-image.jpg">
-    <meta property="og:URL" content="">
+    <meta property="og:URL" content="https://moonpie112.github.io/wdd230/chamber/discover">
     <!-- styles -->
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
@@ -56,7 +56,7 @@
         <div class="hder-body">
             <div class="hder-text">
                 <div class="hder-heading">
-                    <h1 class="hder-title"><span id="visitor">Loading...</span></h1>
+                    <h1 class="hder-title"><span id="visitor">Discover the Shire</span></h1>
                 </div>
                 <p class="hder-paragraph">Embark on a journey through the charming villages of The Shire, where hobbit-holes dot the rolling hillsides and markets teem with artisanal crafts. Join in lively festivals, sample delectable cuisine, and experience the warmth of our communities. Whether you're a seasoned traveler or a curious soul, The Shire invites you to discover its enchanting wonders. Start your adventure today on our Discover page!</p>
             </div>
