--- a/chamber/index.html
+++ b/chamber/index.html
@@ -10,12 +10,13 @@
     <link rel="icon" href="images/favicon.ico">
     <!-- social media -->
     <meta property="og:title" content="Chamber of Commerce for the Shire">
-    <meta property="og:type" content="Chamber of Commerce Site">
+    <meta property="og:type" content="website">
     <meta property="og:image" content="C:\Users\kayla\Dropbox\My PC (DESKTOP-DITIAMG)\Desktop\Winter 2024 Classes\wdd230\chamber\images\og-image.jpg">
-    <meta property="og:URL" content="">
+    <meta property="og:URL" content="https://moonpie112.github.io/wdd230/chamber/index">
     <!-- styles -->
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
+    <link rel="stylesheet" href="styles/normalize.css">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -56,7 +57,7 @@
         <div class="hder-body">
             <div class="hder-text">
                 <div class="hder-heading">
-                    <h1 class="hder-title">Welcome to The Shire</h1>
+                    <h1 class="hder-title">Welcome to The Shire's Chamber of Commerce</h1>
                     <h2 class="hder-subtitle">Where Community Thrives</h2>
                 </div>
                 <p class="hder-paragraph">Step into The Shire Chamber of Commerce, where every handshake comes with a smile and every business is a cherished member of our close-knit family. Here, we're all about building bridges, not just businesses. Join us in creating a vibrant community where neighbors support neighbors, ideas spark conversations, and laughter echoes through the streets!</p>
