--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <li>
                         <div class="week">
                             <h3>Week 4</h3>
-                            <a href="#">activity</a>
+                            <a href="https://codepen.io/Moonpie112/pen/poBRBXK?editors=1100">Psuedo Class</a>
                         </div>
                     </li>
                     <li>
